--- a/KimSuKiNaverAI/app/src/main/res/drawable/seek_bar.xml
+++ b/KimSuKiNaverAI/app/src/main/res/drawable/seek_bar.xml
@@ -3,7 +3,7 @@
         <shape
             android:shape="line">
             <stroke
-                android:color="#ffffff"
+                android:color="#3F9B5D"
                 android:width="1dp"/>
         </shape>
     </item>
@@ -13,7 +13,7 @@
             <shape
                 android:shape="line">
                 <stroke
-                    android:color="#202020"
+                    android:color="#FAFAFA"
                     android:width="3dp"/>
             </shape>
         </clip>
@@ -24,7 +24,7 @@
             <shape
                 android:shape="line">
                 <stroke
-                    android:color="#ffffff"
+                    android:color="#3F9B5D"
                     android:width="3dp"/>
             </shape>
         </clip>
