--- a/KimSuKiNaverAI/app/src/main/res/layout/todo_listview_item.xml
+++ b/KimSuKiNaverAI/app/src/main/res/layout/todo_listview_item.xml
@@ -8,9 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:background="#208020"
         app:cardBackgroundColor="#ffffff"
@@ -34,18 +33,21 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_name_todo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="김윤호"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_content_todo"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:text="금요일 전체회의 8시" />
 
                 <TextView
+                    android:id="@+id/tv_date_todo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
